# nn-optimization-utils

./: .gitignore  README.md  pyproject.toml
source/: __init__.py  autograd.py  lion.py  rmsnorm.py
tests/: test_all.py  test_autograd.py  test_lion.py  test_rmsnorm.py
