[project]
name = "nn-optimization-utils"
version = "0.1.0"
description = "task 4 for introduction into DL"
authors = [
    {name = "Artem Pereverzev",email = "artem_pereverzev_04@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pytest>=7.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]